# newmars

./: .env.example  .gitignore  AI_PROJECT_GENERATION.md  AUDIT_COMPLET_APPRENTISSAGE.md  AUDIT_SANTE_NUTRITION.md  BACKUP_SYSTEM.md  BRAIN_CONNECTIONS.md  BRAIN_READY.md  BRAIN_SANS_SANTE.md  BRAIN_SANTE_DECONNECTEE.md  BUGFIX_MEALENTRIES.md  CALCUL_CALORIES_AVANCE.md  CALENDAR_TYPE_VS_CATEGORY.md  CE_QUE_LE_BRAIN_PREND_EN_COMPTE.md  CLAUDE.md  CODE_EXECUTION_SYSTEM.md  DIAGNOSTIC_HUB_V2.5.md  ESSENTIAL_COMPONENTS_DONE.md  FINAL_SUMMARY.md  FOOD_LIST.md  GEMINI-SETUP.md  GENIUS_COLLABORATION.md  GUIDE_SANTE_UTILISATEUR.md  GUIDE_TEST_V2.md  HEALTH_IMPROVEMENTS.md  HEALTH_SYSTEM.md  HUB_COMMAND_CENTER.md  HUB_V2.1_ESSENTIALS.md  HUB_V2.2_IMPROVEMENTS.md  HUB_V2.3_ACCESSIBILITY.md  HUB_V2.4_AUDIT_COMPLET.md  HUB_V2.4_LAYOUT_OPTIMIZED.md  HUB_V2.5_COMPLETE.md  HUB_V2.6_VISIBILITY_FIX.md  HUB_V2_AMELIORATIONS.md  HUB_V3_FIXES_CRITIQUES.md  INSTALL_RUST.md  JOURNAL_SYSTEM.md  KNOWLEDGE_BASE_SYSTEM.md  LANGUAGE_ARCHIVING_SYSTEM.md  (+63 more)
.claude/: AI-RULES.md
backend/: .coveragerc  .gitignore  GUIDE_SCRIPTS_ZSH.txt  IMPLEMENTATION_SUMMARY.md  INDEX.txt  INTERLEAVING_README.md  MIGRATION_CHATGPT.md  Makefile  QUICKSTART.md  QUICKSTART_SCRIPTS.txt  README.md  RESUME_MIGRATION.txt  SCRIPTS_README.md  SETUP_CHATGPT.md  START_HERE.txt  WITHINGS_INTEGRATION.md  config.py  database.db  database.py  env.example  init_db.py  learning.db  learning_backup_20260103_191706.db  main.py  migrate_databases.py  pytest.ini  start.sh  (+30 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+528 files in other folders)
